Resolved Shape drag issue & Added  options for brightness,contrast, saturation functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="rectangle">Rectangle</string>
     <string name="pointer">Pointer</string>
     <string name="freehand">Free hand</string>
+    <string name="brightness">Brightness</string>
+    <string name="contrast">Contrast</string>
+    <string name="saturation">Saturation</string>
 
     <string name="action_settings">Settings</string>
 </resources>
