--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,11 @@
     <string name="picked_image">You haven\'t picked Image</string>
     <string name="wrong">Something went wrong</string>
     <string name="flash_not_supported">Flash not supported</string>
-    <string name="circle">Circle</string>
-    <string name="rectangle">Rectangle</string>
-    <string name="pointer">Pointer</string>
-    <string name="freehand">Free hand</string>
+    <string name="circle">Cir</string>
+    <string name="rectangle">Rect</string>
+    <string name="pointer">Poin</string>
+    <string name="freehand">Free</string>
+    <string name="crop">Crop</string>
     <string name="brightness">Brightness</string>
     <string name="contrast">Contrast</string>
     <string name="saturation">Saturation</string>
